--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
-bcrypt==5.0.0
+bcrypt==4.0.1
 click==8.3.1
 fastapi==0.124.4
 greenlet==3.3.0
@@ -17,3 +17,4 @@ starlette==0.50.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.38.0
+python-jose[cryptography]==3.3.0
