--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
+alembic==1.13.1
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
-bcrypt==4.0.1
 cffi==2.0.0
 click==8.3.1
 cryptography==46.0.3
@@ -10,6 +10,8 @@ fastapi==0.124.4
 greenlet==3.3.0
 h11==0.16.0
 idna==3.11
+Mako==1.3.10
+MarkupSafe==3.0.3
 passlib==1.7.4
 psycopg2-binary==2.9.11
 pyasn1==0.6.1
@@ -26,4 +28,4 @@ starlette==0.50.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.38.0
-alembic==1.13.1
+websockets==13.1
